# wisconsin

./: .gitignore  .tool-versions  README.md  pyproject.toml
notebooks/: classification.ipynb  eda.ipynb
src/wisconsin/: baseline.py  data.py  model.py  optimise.py
