[project]
name = "wisconsin"
description = "Preliminary analysis of the Diagnostic Wisconsin Breast Cancer Database"
dynamic = ["version"]

requires-python = ">=3.11"
dependencies = [
    "plotly>=5.21.0",
    "seaborn>=0.13.2",
    "ipykernel>=6.29.5",
    "pandas>=2.3.0",
    "openpyxl>=3.1.5",
    "scipy>=1.15.3",
    "scikit-learn>=1.6.1",
    "lightgbm>=4.6.0",
    "shap>=0.47.2",
    "tqdm>=4.67.1",
    "nbformat>=5.10.4",
    "xgboost>=3.0.3",
    "numpy>=2.2.6",
    "umap-learn>=0.5.9.post2",
    "optuna>=4.4.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/wisconsin/__version__.py"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/wisconsin"]